# Ai-agents_by_rox

./: readme.md
Docs/: AgentsTS.md  tsBeginner.md
customer-agent-client/src/app/: page.tsx
customer-agent-client/src/app/chat/[id]/: page.tsx
customer-agent-client/src/components/ai/: OrderAgentNode.tsx  RefundAgentNode.tsx
customer-py-server/: pyproject.toml
customer-py-server/app/: utils.py
mas-py-server/: pyproject.toml  readme.md  server.py
mas-py-server/app/: graph.py
mas-research/: package.json  pnpm-lock.yaml
mas-research/src/app/chat/[id]/: page.tsx
mas-research/src/components/ai/: ChatbotNode.tsx  ReportResultCard.tsx  ResearchAgentNode.tsx
multi-research-client/src/app/chat/[id]/: page.tsx
multi-research-client/src/components/ai/: ChatbotNode.tsx  DocumentStatusCard.tsx  ReportResultCard.tsx  ResearchAgentNode.tsx
multi-research-server/: server.py
multi-research-server/app/: graph.py
my-agent-py/: 05_agents.py  06_memory.py  07_demo-agent.py  test-agent.py
my-agent-ts/: package-lock.json  package.json  tsconfig.json
my-agent-ts/src/: 01_chains.ts  02_structured.ts  new-multi-agent_02.ts  pm-agent_01.ts  pm-agent_02.ts  simple-multi-agent_01.ts
my-agent-ts/src/app/_components/: agent.ts
